# HwGauge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  collector_manager.py  config.py  config.toml  main.py  requirements.txt
HwGauge/: CMakeLists.txt  main.cpp
HwGauge/Collector/: Collector.hpp
HwGauge/Collector/CPUCollector/: CPUCollector.hpp  PCM.cpp  PCM.hpp
HwGauge/Collector/GPUCollector/: GPUCollector.hpp  NVML.cpp  NVMLCollector.cpp  NVMLCollector.hpp
HwGauge/Collector/NPUCollector/: NPUCollector.hpp  NPUImpl.cpp  NPUImpl.hpp
HwGauge/Exposer/: Exposer.cpp  Exposer.hpp
cmake/: FindPCM.cmake
collectors/: __init__.py  base.py  base_collector.py  gpu_nvidia.py
collectors/cpu/: cpu_collector.py  intel_cpu_collector.py
collectors/gpu/: __init__.py  gpu_collector.py  nvidia_gpu_collector.py
